--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,31 +45,35 @@
             android:id="@+id/imageView7"
             android:layout_width="209dp"
             android:layout_height="90dp"
-            android:layout_marginEnd="240dp"
+            android:layout_marginTop="52dp"
+            android:layout_marginEnd="236dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:srcCompat="@drawable/button_background"
-            tools:layout_editor_absoluteY="682dp" />
+            app:layout_constraintTop_toBottomOf="@+id/textView"
+            app:srcCompat="@drawable/button_background" />
 
         <TextView
             android:id="@+id/textView8"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="40dp"
             android:layout_marginTop="16dp"
             android:layout_marginBottom="14dp"
             android:text="Start"
             android:textColor="@color/white"
             android:textSize="26dp"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/imageView7"
-            app:layout_constraintVertical_bias="0.666"
-            tools:layout_editor_absoluteX="47dp" />
+            app:layout_constraintVertical_bias="0.6" />
 
         <ImageView
             android:id="@+id/imageView8"
             android:layout_width="347dp"
             android:layout_height="362dp"
-            app:srcCompat="@drawable/logo10"
-            tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="114dp" />
+            android:layout_marginTop="60dp"
+            android:layout_marginEnd="32dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/logo10" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
