--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -152,16 +152,6 @@
                 tools:srcCompat="@drawable/twitter" />
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/textView6"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="don't have an account? sign up"
-            android:textAlignment="center"
-            android:gravity="center"
-            android:layout_marginTop="16dp"
-            android:textColor="#000000"/>
-
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/button2"
             style="@android:style/Widget.Button"
@@ -172,10 +162,33 @@
             android:background="@drawable/button_background"
             android:gravity="center"
             android:text="Login"
-            android:textSize="18sp"
-            android:textStyle="bold"
             android:textColor="@color/white"
-            />
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/textView6"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:gravity="center"
+            android:text="don't have an account? "
+            android:textAlignment="center"
+            android:textColor="#000000" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/button3"
+            style="@android:style/Widget.Button"
+            android:layout_width="146dp"
+            android:layout_height="23dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="0dp"
+            android:background="@drawable/button_background"
+            android:gravity="center"
+            android:text="sign up"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
