--- a/app/src/main/res/layout/activity_home_page_f.xml
+++ b/app/src/main/res/layout/activity_home_page_f.xml
@@ -52,6 +52,8 @@
                         app:layout_constraintTop_toTopOf="@+id/imageView5"
                         app:layout_constraintVertical_bias="0.121" />
 
+
+
                     <TextView
                         android:id="@+id/staff"
                         android:layout_width="wrap_content"
@@ -71,6 +73,20 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/imageView5"
                         app:layout_constraintVertical_bias="0.0" />
+
+                    <Button
+                        android:id="@+id/button4"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="122dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginEnd="7dp"
+                        android:layout_marginBottom="118dp"
+                        android:text="Logout"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/textView4"
+                        app:layout_constraintTop_toTopOf="parent" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </LinearLayout>
